--- a/misushi_menus.html
+++ b/misushi_menus.html
@@ -1,3 +1,10 @@
+<!-- 
+  misushi_menus.html 
+  Dayrit, Gabriel Andrei G.
+  Delos Santos, Hailey D.
+  Tayag, Michael D.  
+  CYB-201/6INTROWEB
+-->
 <!DOCTYPE html>
 <html lang="en">
 
