--- a/misushi_about.html
+++ b/misushi_about.html
@@ -1,4 +1,11 @@
-    <!DOCTYPE html>
+<!-- 
+  misushi_about.html 
+  Dayrit, Gabriel Andrei G.
+  Delos Santos, Hailey D.
+  Tayag, Michael D.  
+  CYB-201/6INTROWEB
+-->
+<!DOCTYPE html>
     <html lang="en">
 
     <head>
